styles/style.css
/* === PAGE BACKGROUND AND GENERICS === */
.ui-page, .ui-mobile-viewport {
	background: url(../images/tiling_stripes.gif);
}

.ui-content {
	color: #4c596e;
}

.ui-page-header-fullscreen .ui-content, .ui-page-footer-fullscreen .ui-content{
    padding-top: 39px;/* fix for fixed toolbar mode */
}

/* === HEADER BARS - DEFAULT AND BLACK === */
.ui-header {
	border-top: 1px solid #000;
	border-bottom: 1px solid transparent !important;
		-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.6) inset, 0 -1px 0 rgba(0,0,0,0.6) inset;
		-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.6) inset, 0 -1px 0 rgba(0,0,0,0.6) inset;
		box-shadow: 0 1px 0 rgba(255,255,255,0.6) inset, 0 -1px 0 rgba(0,0,0,0.6) inset;
			background: #b0bccd; /* Old browsers */
			background: -moz-linear-gradient(top,  #b0bccd 0%, #889bb3 49%, #8094ae 50%, #6d84a2 100%); /* FF3.6+ */
			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0bccd), color-stop(49%,#889bb3), color-stop(50%,#8094ae), color-stop(100%,#6d84a2)); /* Chrome,Safari4+ */
			background: -webkit-linear-gradient(top,  #b0bccd 0%,#889bb3 49%,#8094ae 50%,#6d84a2 100%); /* Chrome10+,Safari5.1+ */
			background: -o-linear-gradient(top,  #b0bccd 0%,#889bb3 49%,#8094ae 50%,#6d84a2 100%); /* Opera 11.10+ */
			background: -ms-linear-gradient(top,  #b0bccd 0%,#889bb3 49%,#8094ae 50%,#6d84a2 100%); /* IE10+ */
			background: linear-gradient(top,  #b0bccd 0%,#889bb3 49%,#8094ae 50%,#6d84a2 100%); /* W3C */
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0bccd', endColorstr='#6d84a2',GradientType=0 ); /* IE6-9 */
}

.ui-header.ui-bar-b {
	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.6) inset, 0 -1px 0 rgba(0,0,0,0.6) inset;
	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.6) inset, 0 -1px 0 rgba(0,0,0,0.6) inset;
	box-shadow: 0 1px 0 rgba(255,255,255,0.6) inset, 0 -1px 0 rgba(0,0,0,0.6) inset;
		background: #717172; /* Old browsers */
		background: -moz-linear-gradient(top,  #717172 0%, #3a3a3a 50%, #0d0d0f 50%, #0f0f10 100%); /* FF3.6+ */
		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#717172), color-stop(50%,#3a3a3a), color-stop(50%,#0d0d0f), color-stop(100%,#0f0f10)); /* Chrome,Safari4+ */
		background: -webkit-linear-gradient(top,  #717172 0%,#3a3a3a 50%,#0d0d0f 50%,#0f0f10 100%); /* Chrome10+,Safari5.1+ */
		background: -o-linear-gradient(top,  #717172 0%,#3a3a3a 50%,#0d0d0f 50%,#0f0f10 100%); /* Opera 11.10+ */
		background: -ms-linear-gradient(top,  #717172 0%,#3a3a3a 50%,#0d0d0f 50%,#0f0f10 100%); /* IE10+ */
		background: linear-gradient(top,  #717172 0%,#3a3a3a 50%,#0d0d0f 50%,#0f0f10 100%); /* W3C */
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#717172', endColorstr='#0f0f10',GradientType=0 ); /* IE6-9 */
}

.ui-header .ui-btn-inner {
	border: 0 none;
}

.ui-header .ui-title {
	text-shadow: 0 -1px 0 #4c596a !important;
}

/* === LIST VIEWS === */
.ui-listview {
	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.5);
	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.5);
	box-shadow: 0 1px 0 rgba(255,255,255,0.5);
}

.ui-listview, .ui-listview li {
	border-color: #bbbbbb;
	background: #ffffff;
}

.ui-listview li.ui-btn-active {
	color: #FFF;
	background: #106ce5;
}

.ui-listview .ui-li-divider {
	padding-top: 0.4em;
	padding-bottom: 0.4em;
	text-shadow: 0 1px 0 rgba(0,0,0,0.5);
	border-top: #717d85;
	border-bottom: #989ea4;
		-webkit-box-shadow: 0 2px 0 rgba(255,255,255,0.4) inset;
		-moz-box-shadow: 0 2px 0 rgba(255,255,255,0.4) inset;
		box-shadow: 0 2px 0 rgba(255,255,255,0.4) inset;
			background: #6d8291; /* Old browsers */
			background: -moz-linear-gradient(top,  #6d8291 0%, #8ea0ad 100%); /* FF3.6+ */
			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6d8291), color-stop(100%,#8ea0ad)); /* Chrome,Safari4+ */
			background: -webkit-linear-gradient(top,  #6d8291 0%,#8ea0ad 100%); /* Chrome10+,Safari5.1+ */
			background: -o-linear-gradient(top,  #6d8291 0%,#8ea0ad 100%); /* Opera 11.10+ */
			background: -ms-linear-gradient(top,  #6d8291 0%,#8ea0ad 100%); /* IE10+ */
			background: linear-gradient(top,  #6d8291 0%,#8ea0ad 100%); /* W3C */
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6d8291', endColorstr='#8ea0ad',GradientType=0 ); /* IE6-9 */
}

.ui-listview .ui-icon-arrow-r {
	background: transparent url(../images/arrow_right.png) center center no-repeat !important;
		-webkit-border-radius: 0;
		-moz-border-radius: 0;
		border-radius: 0;
}

/* === SLIDER STYLES === */
div.ui-slider {
	height: 9px;
	border: 1px solid #929292;
		background: #bababa; /* Old browsers */
		background: -moz-linear-gradient(top,  #bababa 0%, #f8f8f8 50%, #f8f8f8 100%); /* FF3.6+ */
		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#bababa), color-stop(50%,#f8f8f8), color-stop(100%,#f8f8f8)); /* Chrome,Safari4+ */
		background: -webkit-linear-gradient(top,  #bababa 0%,#f8f8f8 50%,#f8f8f8 100%); /* Chrome10+,Safari5.1+ */
		background: -o-linear-gradient(top,  #bababa 0%,#f8f8f8 50%,#f8f8f8 100%); /* Opera 11.10+ */
		background: -ms-linear-gradient(top,  #bababa 0%,#f8f8f8 50%,#f8f8f8 100%); /* IE10+ */
		background: linear-gradient(top,  #bababa 0%,#f8f8f8 50%,#f8f8f8 100%); /* W3C */
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bababa', endColorstr='#f8f8f8',GradientType=0 ); /* IE6-9 */
}
/* ... */

